--- a/package.json
+++ b/package.json
@@ -1,23 +1,34 @@
 {
-    "name": "iran-map",
+    "name": "react-iran-city-map",
+    "version": "1.1.0",
+    "private": false,
     "description": "Iran map in SVG format, includes all provinces and cities.",
     "main": "./dist/react-iran-city-map.umd.js",
     "module": "./dist/react-iran-city-map.es.js",
+    "types": "dist/index.d.ts",
     "repository": {
         "type": "git",
         "url": "git+https://github.com/mohsensami/iran-map"
+    },
+    "exports": {
+        ".": {
+            "import": "./dist/index.es.js",
+            "require": "./dist/index.umd.js",
+            "types": "./dist/index.d.ts"
+        }
     },
     "files": [
         "dist",
         "README.md"
     ],
-    "private": false,
+    "publishConfig": {
+        "access": "public"
+    },
     "keywords": [
         "react",
         "iran map"
     ],
     "author": "Mohsen Sami",
-    "version": "1.0.0",
     "license": "MIT",
     "type": "module",
     "scripts": {
