--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    "homepage": "http://mohsensami.github.io/iran-map-react",
     "name": "iran-map-react",
     "version": "1.1.1",
     "private": false,
