--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "homepage": "http://mohsensami.github.io/iran-map-react",
     "name": "iran-map-react",
-    "version": "1.1.1",
+    "version": "1.1.2",
     "private": false,
-    "description": "Iran map in SVG format, includes all provinces and cities.",
+    "description": "Iran map in SVG format, Displays all cities in Iran with precise locations.",
     "main": "./dist/iran-map-react.umd.js",
     "module": "./dist/iran-map-react.es.js",
     "types": "dist/index.d.ts",
@@ -19,6 +19,7 @@
         }
     },
     "files": [
+        "build",
         "dist",
         "README.md"
     ],
